tools/k8s/dev/paynetic-api/paynetic-api.k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paynetic-api
  labels:
    component: paynetic-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: paynetic-api
      tier: backend
  template:
    metadata:
      labels:
        component: paynetic-api
        tier: backend
    spec:
      containers:
        - name: paynetic-api
          image: paynetic-api.dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
