tools/k8s/dev/paynetic-api/paynetic-api.k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paynetic-api
  labels:
    component: paynetic-api
    tier: backend
spec:
  selector:
    component: paynetic-api
    tier: backend
  ports:
    - port: 3000
      targetPort: 3000
